--- a/config/cfg_pretrain.yaml
+++ b/config/cfg_pretrain.yaml
@@ -17,7 +17,8 @@ evaluators:
 # Hyperparams - Training
 global_batch_size: 768
 
-epochs: 100000
+# epochs: 100000
+epochs: 100
 eval_interval: 10000
 checkpoint_every_eval: True
 
